instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: type blue is not a member of object java.awt.Color
getCouleurBrosse():Color.blue
                         ^InstructionsDrawG:2: error: not found: type blue
setCouleurBrosse(c:blue);
                   ^InstructionsDrawG:2: error: not found: value c
setCouleurBrosse(c:blue);
                 ^